--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 # Force HTTPS
-RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://infinitewa.com/$1 [R=301,L]
+#RewriteEngine On
+#RewriteCond %{SERVER_PORT} 80
+#RewriteRule ^(.*)$ https://infinitewa.com/$1 [R=301,L]
